--- a/.github/workflows/backend-data.yml
+++ b/.github/workflows/backend-data.yml
@@ -2,19 +2,13 @@ name: Backend Data - Build and Lint
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths:
-      - 'PhantomDave.BankTracking.Data/**'
-      - 'PhantomDave.BankTracking.Library/**'
-      - 'PhantomDave.BankTracking.sln'
-      - '.github/workflows/backend-data.yml'
-  pull_request:
-    branches: [ main, develop ]
-    paths:
-      - 'PhantomDave.BankTracking.Data/**'
-      - 'PhantomDave.BankTracking.Library/**'
-      - 'PhantomDave.BankTracking.sln'
-      - '.github/workflows/backend-data.yml'
+      - "PhantomDave.BankTracking.Data/**"
+      - "PhantomDave.BankTracking.Library/**"
+      - "PhantomDave.BankTracking.sln"
+      - ".github/workflows/backend-data.yml"
+  workflow_call:
 
 jobs:
   build-and-lint:
@@ -24,28 +18,28 @@ jobs:
       contents: write
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v5
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '9.0.x'
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "9.0.x"
 
-    - name: Restore dependencies
-      run: dotnet restore PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj
+      - name: Restore dependencies
+        run: dotnet restore PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj
 
-    - name: Format code
-      run: dotnet format PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj --verbosity diagnostic
+      - name: Format code
+        run: dotnet format PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj --verbosity diagnostic
 
-    - name: Commit formatted code
-      uses: stefanzweifel/git-auto-commit-action@v7
-      if: github.event_name == 'push'
-      with:
-        commit_message: 'chore: auto-format Backend Data code'
-        file_pattern: 'PhantomDave.BankTracking.Data/**'
+      - name: Commit formatted code
+        uses: stefanzweifel/git-auto-commit-action@v7
+        if: github.event_name == 'push'
+        with:
+          commit_message: "chore: auto-format Backend Data code"
+          file_pattern: "PhantomDave.BankTracking.Data/**"
 
-    - name: Build
-      run: dotnet build PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj --configuration Release --no-restore
+      - name: Build
+        run: dotnet build PhantomDave.BankTracking.Data/PhantomDave.BankTracking.Data.csproj --configuration Release --no-restore
