--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,8 @@
 name: Run Project Tests
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
   test:
