--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -77,6 +77,9 @@ jobs:
         uses: ./.github/workflows/backend-data.yml
 
     codeql:
+        permissions:
+            actions: read
+            security-events: write
         needs: changes
         secrets: inherit
         uses: ./.github/workflows/codeql-analysis.yml
