--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -79,6 +79,8 @@ jobs:
     codeql:
         permissions:
             actions: read
+            contents: read
+            packages: read
             security-events: write
         needs: changes
         secrets: inherit
