chore: Correct file extension for PR filter configuration in workflow

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -26,7 +26,7 @@ jobs:
               id: filter
               with:
                   filters: |
-                      .github/pr-filter.yaml
+                      .github/pr-filter.yml
 
         outputs:
             frontend: ${{ steps.filter.outputs.frontend }}
