--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -18,7 +18,7 @@ jobs:
             - uses: actions/checkout@v5
               with:
                   sparse-checkout: |
-                      .github/pr-filter.yaml
+                      .github/pr-filter.yml
                       .github/actions
                       terraform/environments.json
 
