--- a/.github/workflows/build-backend-image.yml
+++ b/.github/workflows/build-backend-image.yml
@@ -1,18 +1,7 @@
 name: Build and Push Backend Image
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - "PhantomDave.BankTracking.Api/**"
-      - "PhantomDave.BankTracking.Data/**"
-      - "PhantomDave.BankTracking.Library/**"
-      - "Dockerfile"
-      - ".github/workflows/build-backend-image.yml"
-  workflow_dispatch:
-  workflow_run:
-    workflows: ["Run Project Tests"]
-    types: [completed]
+  workflow_call:
 
 env:
   REGISTRY: ghcr.io
@@ -31,7 +20,6 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -44,16 +32,15 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=sha,prefix={{branch}}-,enable=${{ github.event_name != 'pull_request' }}
+            type=sha,prefix={{branch}}-
             type=ref,event=branch
-            type=ref,event=pr
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest
 
       - name: Build and push backend image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
