chore: Simplify paths-filter configuration in PR checks workflow

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -25,8 +25,7 @@ jobs:
             - uses: dorny/paths-filter@v3
               id: filter
               with:
-                  filters: |
-                      .github/pr-filter.yml
+                  filters: .github/pr-filter.yml
 
         outputs:
             frontend: ${{ steps.filter.outputs.frontend }}
