--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
         "EditorConfig.EditorConfig",
         "streetsidesoftware.code-spell-checker",
         "mtxr.sqltools",
-        "mtxr.sqltools-driver-pg"
+        "mtxr.sqltools-driver-pg",
+        "usernamehw.errorlens"
       ]
     }
   },
