--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,21 @@
 ﻿# Build stage
-FROM node:24 AS build
+FROM oven/bun:latest AS build
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json bun.lock ./
 
-RUN npm ci
+RUN bun install --frozen-lockfile
 
 COPY . .
 
 # Generate GraphQL types from local schema file (downloaded before build)
 # Set USE_LOCAL_SCHEMA=true to use the schema.graphql file instead of fetching from URL
 ENV USE_LOCAL_SCHEMA=true
-RUN if [ -f schema.graphql ]; then npm run codegen; else echo "Warning: schema.graphql not found, skipping codegen"; fi
+RUN if [ -f schema.graphql ]; then bun run codegen; else echo "Warning: schema.graphql not found, skipping codegen"; fi
 
 # Build for production
-RUN npm run build -- --configuration production
+RUN bun run build -- --configuration production
 
 # Production stage
 FROM nginx:alpine AS final
