--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,15 +26,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v6
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          bun-version: latest
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: bun install
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
@@ -71,12 +69,11 @@ jobs:
 
       - name: Generate GraphQL types
         working-directory: ./frontend
-        run: npm run codegen
+        run: bun run codegen
 
       - name: Format code with Prettier
         working-directory: ./frontend
-        run: npx prettier --write "src/**/*.{ts,html,css,scss}"
-
+        run: bun run prettier --write "src/**/*.{ts,html,css,scss}"
       - name: Commit formatted code
         uses: stefanzweifel/git-auto-commit-action@v7
         if: github.event_name == 'push'
@@ -86,8 +83,8 @@ jobs:
 
       - name: Check TypeScript compilation
         working-directory: ./frontend
-        run: npx tsc --noEmit
+        run: bun run tsc --noEmit
 
       - name: Build
         working-directory: ./frontend
-        run: npm run build -- --configuration=development
+        run: bun run build -- --configuration=development
