--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,10 +37,12 @@ updates:
     commit-message:
       prefix: "chore(deps)"
       include: "scope"
-    ignore:
-      # Ignore Angular major version updates to avoid breaking changes
-      - dependency-name: "@angular/*"
-        update-types: ["version-update:semver-major"]
+    groups:
+      angular:
+        patterns:
+          - "@angular/*"
+          - "@angular-devkit/*"
+          - "@angular-eslint/*"
 
   # Docker base images
   - package-ecosystem: "docker"
