chore: standardize import formatting and simplify null returns in tests

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,6 +43,7 @@ updates:
           - "@angular/*"
           - "@angular-devkit/*"
           - "@angular-eslint/*"
+          - "angular-*"
 
   # Docker base images
   - package-ecosystem: "docker"
