--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -6,11 +6,8 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts"
-  ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "src/**/*.spec.ts"
