--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,8 @@
   "name": "BankTracking Dev",
   "image": "mcr.microsoft.com/devcontainers/dotnet:10.0",
   "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/node": {}
   },
   "forwardPorts": [4200, 5000],
   "portsAttributes": {
@@ -36,10 +37,10 @@
         "streetsidesoftware.code-spell-checker",
         "mtxr.sqltools",
         "mtxr.sqltools-driver-pg",
-        "usernamehw.errorlens"
+        "usernamehw.errorlens",
+        "GitHub.copilot-chat"
       ]
     }
   },
-  "updateContentCommand": "dotnet build ./PhantomDave.BankTracking.Api/PhantomDave.BankTracking.Api.csproj || true",
   "postStartCommand": "docker compose up database -d && echo 'Devcontainer ready. You can run: dotnet run --project PhantomDave.BankTracking.Api & and cd frontend && bun run start'"
 }
