--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --config codegen.ts --watch",
     "schema:download": "graphql-codegen --config codegen.ts",
-    "prestart": "npm run codegen",
+    "prestart": "bun run codegen",
     "lint": "eslint \"src/**/*.{ts,js,html}\" --ext .ts,.js,.html --max-warnings=0",
     "lint:fix": "eslint \"src/**/*.{ts,js,html}\" --ext .ts,.js,.html --fix",
     "format": "prettier --write \"**/*.{ts,js,html,css,scss,json,md}\""
